@@ -702,6 +702,7 @@ Peter Parente
 Alexandre Parenteau
 Dan Parisien
 Harri Pasanen
+Joe Peterson
 Randy Pausch
 Samuele Pedroni
 Marcel van der Peijl
